--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
             <div class="col-md-6">
                 <div class="card shadow-sm">
                     <div class="card-body text-center">
-                        <img src="avatar.jpg" alt="Profile Image" class="profile-img">
-                        <h2>Apep Wahyudin</h2>
-                        <p class="text-muted">Web Developer</p>
-                        <p>I am a passionate web developer with over 5 years of experience in building responsive and user-friendly websites. Skilled in HTML, CSS, JavaScript, and modern frameworks like React and Bootstrap.
+                        <img src="IMG-20241019-WA0134.jpg>
+                        <h2>Teddy satriawan ramadhani</h2>
+                        <p class="text-muted">belajar</p>
+                        <p>saya teddy satriawan ramadhani sekolah di smk informatika sumedang
                         </p>
                         <hr>
                         <ul class="list-unstyled">
-                            <li><i class="fa-regular fa-envelope"></i> <strong>Email:</strong> johndoe@example.com</li>
-                            <li><i class="fa-brands fa-whatsapp"></i> <strong>Whatsapp:</strong> +123 456 7890</li>
-                            <li><i class="fa-solid fa-house"></i> <strong>Address:</strong> 123 Main Street, Anytown, USA</li>
+                            <li><i class="fa-regular fa-envelope"></i> <strong>Email:</strong> Teddyramadhani156@gmail. com</li>
+                            <li><i class="fa-brands fa-whatsapp"></i> <strong>Whatsapp:</strong> +6281298555354</li>
+                            <li><i class="fa-solid fa-house"></i> <strong>Address:</strong> rancakalong </li>
                         </ul>
-                        <a href="https://www.instagram.com/sebuahsemangat" target="_blank" class="btn btn-instagram mt-3">
+                        <a href="https://www.instagram.com/ramadhanyteddysatriawan/profilecard/?igsh=MTZsaGtrNG83emI5dw==" target="_blank" class="btn btn-instagram mt-3">
                             <i class="fab fa-instagram"></i> Follow me on Instagram
                         </a>
                     </div>
