--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="card shadow-sm">
                     <div class="card-body text-center">
-                        <img src="IMG-20241019-WA0134.jpg>
+                         <img src="IMG-20241019-WA0134.jpg" alt="profile Image" class="profile-img" style="width:50;height:40;">
                         <h2>Teddy satriawan ramadhani</h2>
                         <p class="text-muted">belajar</p>
                         <p>saya teddy satriawan ramadhani sekolah di smk informatika sumedang
